fix profile spacing

--- a/app/assets/stylesheets/partials/profile-page.scss
+++ b/app/assets/stylesheets/partials/profile-page.scss
@@ -3,6 +3,9 @@
   h1 {
     text-align: left;
   }
+  div {
+    padding-bottom: 1em;
+  }
 }
 
 .profile-top {
@@ -37,5 +40,15 @@
       color: $link-color;
     }
   }
+}
 
+.profile-bottom {
+  h1 {
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+  p {
+    padding-top: .3em;
+    margin-top: 0;
+  }
 }
